# Backtesting_Framework_1.1

./: .gitignore  EXECUTION_GUIDE.md  MIGRATION_EXECUTION_PLAN.md  Readme.MD  docker-compose.yml  pyproject.toml
.claude/: settings.local.json
.claude/agents/: quant-trader-ml.md
config/: backtesting.yaml  exchanges.yaml
scripts/: 1_download_to_parquet.py  2_parquet_to_questdb.py  generate_migration_plan.py  test_dashboard.py  test_indicators.py  test_interactive_viz.py  visualize_indicators.py
scripts/utils/: compare_parquet_questdb.py  inspect_parquet.py
src/indicators/: base.py  momentum.py  statistical.py  trend.py  volatility.py  volume.py
src/utils/: config.py
src/visualization/: __init__.py  dashboard.py  indicator_plots.py  interactive_plots.py
