[project]
name = "crypto-backtest-framework"
version = "0.1.0"
description = "Cryptocurrency backtesting framework with ML optimization"
authors = [
    {name = "Jostin Viales"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = "^3.11"
dependencies = [
    "pandas (>=2.3.3,<3.0.0)",
    "numpy (>=2.3.4,<3.0.0)",
    "ccxt (>=4.5.19,<5.0.0)",
    "questdb (>=4.0.0,<5.0.0)",
    "pandera (>=0.26.1,<0.27.0)",
    "numba (>=0.62.1,<0.63.0)",
    "matplotlib (>=3.10.7,<4.0.0)",
    "plotly (>=6.4.0,<7.0.0)",
    "scikit-learn (>=1.7.2,<2.0.0)",
    "optuna (>=4.6.0,<5.0.0)",
    "lightgbm (>=4.6.0,<5.0.0)",
    "typer (>=0.20.0,<0.21.0)",
    "tqdm (>=4.67.1,<5.0.0)",
    "python-dotenv (>=1.2.1,<2.0.0)",
    "pyyaml (>=6.0.3,<7.0.0)",
    "psycopg2-binary (>=2.9.11,<3.0.0)",
    "pyarrow (>=22.0.0,<23.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=9.0.1,<10.0.0)",
    "pytest-cov (>=7.0.0,<8.0.0)",
    "black (>=25.11.0,<26.0.0)",
    "flake8 (>=7.3.0,<8.0.0)",
    "mypy (>=1.18.2,<2.0.0)",
    "ipykernel (>=7.1.0,<8.0.0)",
    "jupyter (>=1.1.1,<2.0.0)"
]
